--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -8,6 +8,8 @@
             <th>Age</th>
             <th>Education</th>
             <th>Faculty</th>
+            <th>Start</th>
+            <th>Graduate</th>
             <th>AbonentId</th>
         </tr>
     </thead>
@@ -19,6 +21,8 @@
             <td>{{res.age}}</td>
             <td><tr>{{res.education[0]}}</tr><tr>{{res.education[1]}}</tr><tr>{{res.education[2]}}</tr></td>
             <td><tr>{{res.faculty[0]}}</tr><tr>{{res.faculty[1]}}</tr><tr>{{res.faculty[2]}}</td>
+                <td><tr>{{res.start[0]}}</tr><tr>{{res.start[1]}}</tr><tr>{{res.start[2]}}</tr></td>
+                <td><tr>{{res.graduate[0]}}</tr><tr>{{res.graduate[1]}}</tr><tr>{{res.graduate[2]}}</tr></td>
             <td>{{res.abonentId}}</td>
         </tr>
     </tbody>
